@@ -226,6 +226,7 @@ Version 1.5
  - Add Everspring SP815 Pet Immune Pir Motion Detector (Nechry)
  - Add philio/Zipato pad02 Smart Dimmer E27 (Nechry)
  - Add Remotec ZXT-600IN AC MASTER (Nechry)
+ - Add TKB TZ57 Two channel switch (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
